src/test/ui/issues/issue-28971.stderr
error[E0599]: no variant named `Baz` found for type `Foo` in the current scope
  --> $DIR/issue-28971.rs:9:18
   |
LL | enum Foo {
   | -------- variant `Baz` not found here
...
LL |             Foo::Baz(..) => (),
   |             -----^^^----
   |             |    |
   |             |    help: did you mean: `Bar`
   |             variant not found in `Foo`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
